--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "@google-cloud/datastore": "^6.1.0",
     "@google-cloud/pubsub": "^2.3.0",
     "@google-cloud/secret-manager": "^3.1.0",
     "@slack/events-api": "^2.3.4",
