--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "node": ">=8.0.0"
   },
   "scripts": {
-    "start": "node app.js"
+    "build": "npm run build-ts && npm run copy-static-assets",
+    "build-ts": "tsc -p .",
+    "start": "node dist/app.js",
+    "copy-static-assets": "ts-node copyStaticAssets.ts",
+    "gcp-build": "npm run build"
   },
   "dependencies": {
     "@google-cloud/datastore": "^6.1.0",
@@ -21,5 +25,13 @@
     "express": "^4.16.3",
     "google-auth-library": "^6.0.6",
     "qs": "^6.9.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.8",
+    "@types/node": "^14.10.2",
+    "@types/shelljs": "^0.8.8",
+    "shelljs": "^0.8.4",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2"
   }
 }
