--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
-    "@types/node": "^14.10.2",
+    "@types/node": ">=4.2.0 < 13",
     "@types/shelljs": "^0.8.8",
     "shelljs": "^0.8.4",
     "ts-node": "^9.0.0",
