Updated to use standalone checkphish npm module

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@google-cloud/pubsub": "^2.3.0",
     "@google-cloud/secret-manager": "^3.1.0",
     "@slack/events-api": "^2.3.4",
+    "@timjohns/checkphish": "^1.0.2",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "ejs": "^3.1.3",
